--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
             width: 15%;
             background: #3f3f3f;
         }
-    /* Slideshow container */
+        * {
+  box-sizing: border-box;
+}
+body {
+  font-family: Verdana, sans-serif; margin:0;
+  background: #101010;
+}
+.mySlides {
+  display: none
+}
+img {
+  vertical-align: middle;
+  position: relative;
+}
+
+/* Slideshow container */
 
 .slideshow-container {
 width: 800px;
@@ -854,7 +869,7 @@ h2{
     
         
     </header>
-    <div id="inicio" id="carouselExampleIndicators" class="carousel slide vh-100 overflow-hidden" data-bs-ride="true">
+    <div id="carouselExampleIndicators" class="carousel slide vh-100 overflow-hidden" data-bs-ride="true">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -881,7 +896,6 @@ h2{
         </button>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
     <section class="slidermarcas">
 
         <article class="contain1">
@@ -1217,7 +1231,7 @@ h2{
             </div>
         </div>
             <div class="grupo-2">
-                <small>&copy; 2022 Desarrolladores: Leandro Arnaldi y Matias Botarini</small>
+                <small>&copy; 2022 Desarrolladores: Leandro Arnaldi y Matias Bottarini</small>
             </div>
         </section>
         </footer> 
