--- a/index_trabajador.html
+++ b/index_trabajador.html
@@ -17,6 +17,127 @@
             width: 15%;
             background: #3f3f3f;
         }
+        * {
+  box-sizing: border-box;
+}
+body {
+  font-family: Verdana, sans-serif; margin:0;
+  background: #101010;
+}
+.mySlides {
+  display: none
+}
+img {
+  vertical-align: middle;
+  position: relative;
+}
+
+/* Slideshow container */
+
+.slideshow-container {
+width: 800px;
+height: 600px;
+position: relative¡;
+margin: 15px;
+margin-top: -9px;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+cursor: pointer;
+position: absolute;
+top: 50%;
+width: auto;
+padding: 16px;
+margin-top: -22px;
+color: white;
+font-weight: bold;
+font-size: 18px;
+transition: 0.6s ease;
+border-radius: 0 3px 3px 0;
+user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+right: 0;
+border-radius: 3px 0 0 3px;
+}
+.prev{
+left:0;
+border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+color: #f2f2f2;
+font-size: 15px;
+padding: 8px 12px;
+position: absolute;
+bottom: 8px;
+width: 100%;
+text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+color: #f2f2f2;
+font-size: 12px;
+padding: 8px 12px;
+position: relative;
+top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+cursor: pointer;
+height: 15px;
+width: 15px;
+margin: 0 2px;
+background-color: #bbb;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+-webkit-animation-name: fade;
+-webkit-animation-duration: 1.5s;
+animation-name: fade;
+animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+from {opacity: .4} 
+to {opacity: 1}
+}
+
+@keyframes fade {
+from {opacity: .4} 
+to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+.prev, .next,.text {font-size: 11px}
+.dot{
+height: 10px;
+width: 10px;
+}
+
+@media only screen and (max-width: 500px) {
+.prev, .next,.text {font-size: 14px}
+}}
 .prov{
    
    display: flex;
@@ -585,9 +706,6 @@ h2{
     width: 100%;
     max-width: 1200px;
     margin: auto;
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 100px;
     padding: 45px 0px;
 }
 .pie-pagina .grupo-1 .box figure{
@@ -609,26 +727,27 @@ h2{
 .pie-pagina .grupo-1 .box h3{
     color: #fff;
     margin-bottom: -15px;
-    margin-left: 60px;
+    margin-left: 140px;
     font-size: 20px;
 }
 .pie-pagina .grupo-1 .box h6{
     color: #fff;
     margin-bottom: -15px;
-    margin-left: 40px;
+    margin-left: 100px;
     font-size: 16px;
 }
 .pie-pagina .grupo-1 .box h4{
     color: #efefef;
-    margin-left: 100px;
+    margin-left: 80px;
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 .pie-pagina .grupo-1 .box p{
     color: #efefef;
-    margin-left: -80px;
-    font-size: 17.3px;
-    margin-top: 30px;
+    margin-left: -20px;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: -20px;
     padding-left: 120px;
     word-spacing: 10px;
 }
@@ -636,9 +755,15 @@ h2{
     color: #efefef;
     margin-left: -80px;
     font-size: 17.3px;
-    margin-top: 30px;
-    padding-left: 120px;
-    word-spacing: 18px;
+    margin-top: 10px;
+    padding-left: 100px;
+    
+}
+.pie-pagina .grupo-1 .box h1{
+    color: #efefef;
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: 120px;
 }
 .pie-pagina .grupo-1 .red-social{
     width: 300PX;
@@ -646,17 +771,13 @@ h2{
     align-items: right;
 }
 .pie-pagina .grupo-1 .red-social a{
+    font-size: 20px;
     text-decoration: none;
-    width: 45px;
-    height: 45px;
-    line-height: 45px;
     color: #fff;
-    margin-top: -800px;
-    margin-left: 880px;
+    margin-left: 81px;
     background-color: #0d2033;
-    align-items: right;
     text-align: center;
-    transition: all 300ms ease;
+   
 }
 .pie-pagina .grupo-1 .red-social a:hover{
     color: rgb(0, 1, 7);
@@ -670,8 +791,16 @@ h2{
 .pie-pagina .grupo-2 small{
     font-size: 15px;
 }
-
-
+.head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 120px;
+    background: linear-gradient(to right,#4161a5,#96a9d1);
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
@@ -682,13 +811,7 @@ h2{
     <div class="head">
 
         <div class="logo">
-            <img src="Imagenes/LOGO.ico" width="80" alt="">
-        </div>
-        <div class="logo1">
-            <a href="https://www.se.com/ar/es/"><img src="Imagenes/1x/Recurso 4.png" width="100" alt=""></a>
-        </div>
-        <div class="logo2">
-            <a href="https://new.abb.com/south-america/el-latam-tour"><img src="Imagenes/1x/Recurso 5.png" width="100" alt=""></a>
+            <img src="Imagenes/logo modificado.png" width="280" alt="">
         </div>
         <nav class="navbar">
             <a href="#inicio">Inicio</a>
@@ -1033,7 +1156,7 @@ h2{
     <br>
     <br>
     <br>
-    <footer class="pie-pagina">
+    <footer class="pie-pagina" id="pie-pagina">
         <div class="grupo-1">
             <div class="box">
                 <h2>Como llegar:</h2>
@@ -1047,23 +1170,25 @@ h2{
                 <h3>Télefonos:</h3>
                 <br>
                 <h6>LLama a cualquier linea</h6>
-                <p>7546-5690
-                    2106-0462</p>
-                    <h5>7533-2216
-                    7547-6554</h5>
+                <p>+540117546-5690</p>
+                <p>+540112106-0462</p>
+                <p>+540117547-6554</p>
+                <p>+540117533-2216</p>
+                <h1>Mail de contacto:</h1>
+                <h5>ventas@enerpampa.com</h5>
             </div>
                     <div class="box">
-                    <h4>Redes sociales:</h4>
-                    </div>
+                    <h4>Nuestras redes sociales:</h4>
                     <div class="red-social">
-                        <a href="https://www.facebook.com/people/Enerpampa-SA-Distribuidor-de-Materiales-El%C3%A9ctricos/100063664860017/?ref=page_internal&mt_nav=0" class="fa fa-facebook"></a>
-                        <a href="https://www.instagram.com/enerpampa.sa/"class="fa fa-instagram"></a>
-                        <a href="https://www.linkedin.com/in/enerpampa-s-a-355a45254/" class="fa fa-linkedin"></a>
+                    <a href="https://www.facebook.com/people/Enerpampa-SA-Distribuidor-de-Materiales-El%C3%A9ctricos/100063664860017/?ref=page_internal&mt_nav=0" class="fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/enerpampa.sa/"class="fa fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/enerpampa-s-a-355a45254/" class="fa fa-linkedin"></a>
                     </div>
                 </div>
             </div>
+        </div>
             <div class="grupo-2">
-                <small>&copy; 2022 Desarrolladores: Leandro Arnaldi y Matias Botarini</small>
+                <small>&copy; 2022 Desarrolladores: Leandro Arnaldi y Matias Bottarini</small>
             </div>
         </section>
         </footer> 
